--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "exceljs": "^4.4.0",
+    "framer-motion": "^11.7.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
@@ -57,6 +58,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.3",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
