--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "exceljs": "^4.4.0",
     "framer-motion": "^11.7.0",
     "input-otp": "^1.2.4",
+    "kra-tools": "file:",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
