--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "exceljs": "^4.4.0",
     "framer-motion": "^11.7.0",
     "input-otp": "^1.2.4",
+    "jszip": "^3.10.1",
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
@@ -59,6 +60,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.3",
+    "react-spreadsheet-grid": "^2.3.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
