--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "^0.3.0",
     "playwright": "^1.47.2",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
