--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dlv": "^1.1.3",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "exceljs": "^4.4.0",
@@ -54,7 +55,7 @@
     "jszip": "^3.10.1",
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "pdf.js-extract": "^0.2.1",
     "playwright": "^1.47.2",
@@ -82,7 +83,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
