--- a/package.json
+++ b/package.json
@@ -45,17 +45,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dlv": "^1.1.3",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "exceljs": "^4.4.0",
+    "express": "^4.21.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.7.0",
     "input-otp": "^1.2.4",
     "jszip": "^3.10.1",
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
+    "mssql": "^11.0.1",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
@@ -79,6 +82,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/mssql": "^9.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
