--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.17.0",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -42,6 +43,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-table": "^8.20.5",
     "async-retry": "^1.3.3",
+    "canvas-browserify": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,6 +52,7 @@
     "dlv": "^1.1.3",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
+    "encoding": "^0.1.13",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
@@ -63,10 +66,13 @@
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "pdf.js-extract": "^0.2.1",
+    "pdfjs-dist": "^2.16.105",
     "playwright": "^1.47.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-csv-reader": "^4.0.0",
     "react-day-picker": "^8.10.1",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
@@ -91,6 +97,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5",
-    "webpack": "^5.95.0"
+    "webpack": "^5.95.0",
+    "worker-loader": "^3.0.8"
   }
 }
