--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-table": "^8.20.5",
     "async-retry": "^1.3.3",
+    "axios": "^1.7.8",
     "canvas-browserify": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "date-fns": "^3.6.0",
     "dlv": "^1.1.3",
     "dotenv": "^16.4.5",
