--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-table": "^8.20.5",
+    "@types/papaparse": "^5.3.15",
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
     "canvas-browserify": "^1.1.3",
@@ -64,11 +65,11 @@
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
     "mssql": "^11.0.1",
-    "next": "^14.2.13",
+    "next": "^15.1.3",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "pdf.js-extract": "^0.2.1",
-    "pdfjs-dist": "^2.16.105",
+    "pdfjs-dist": "^4.10.38",
     "playwright": "^1.47.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
@@ -82,6 +83,7 @@
     "react-spreadsheet-grid": "^2.3.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "rimraf": "^3.0.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
