--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^3.9.0",
+    "@pdfme/common": "^5.3.5",
+    "@pdfme/generator": "^5.3.5",
+    "@pdfme/schemas": "^5.3.5",
+    "@pdfme/ui": "^5.3.5",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -50,6 +54,7 @@
     "@types/papaparse": "^5.3.15",
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
+    "blob-stream": "^0.1.3",
     "canvas-browserify": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -65,6 +70,7 @@
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.7.0",
+    "html2pdf.js": "^0.10.2",
     "input-otp": "^1.2.4",
     "jszip": "^3.10.1",
     "kra-tools": "file:",
@@ -74,7 +80,7 @@
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "pdf.js-extract": "^0.2.1",
-    "pdfjs-dist": "^4.10.38",
+    "pdfkit": "^0.16.0",
     "playwright": "^1.47.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
