--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/supabase-js": "^2.46.2",
-    "@tanstack/react-table": "^8.20.5",
-    "@types/papaparse": "^5.3.15",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
     "blob-stream": "^0.1.3",
@@ -63,6 +62,7 @@
     "csv-parser": "^3.0.0",
     "date-fns": "^3.6.0",
     "dlv": "^1.1.3",
+    "docx-preview": "^0.3.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "encoding": "^0.1.13",
@@ -91,16 +91,21 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.3",
     "react-spreadsheet-grid": "^2.3.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "rimraf": "^3.0.2",
     "sonner": "^1.5.0",
+    "@supabase/supabase-js": "^2.46.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "@tanstack/react-table": "^8.20.5",
     "tesseract.js": "^5.1.1",
+    "@types/papaparse": "^5.3.15",
     "vaul": "^0.9.6",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
