--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.0",
     "@pdfme/common": "^5.3.5",
     "@pdfme/generator": "^5.3.5",
@@ -51,6 +52,9 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@supabase/supabase-js": "^2.46.2",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/papaparse": "^5.3.15",
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
     "blob-stream": "^0.1.3",
@@ -98,12 +102,9 @@
     "recharts": "^2.12.7",
     "rimraf": "^3.0.2",
     "sonner": "^1.5.0",
-    "@supabase/supabase-js": "^2.46.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "@tanstack/react-table": "^8.20.5",
     "tesseract.js": "^5.1.1",
-    "@types/papaparse": "^5.3.15",
     "vaul": "^0.9.6",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
