--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/core": "3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "3.12.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-table": "^8.20.5",
     "@types/papaparse": "^5.3.15",
@@ -81,10 +82,12 @@
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
     "mssql": "^11.0.1",
+    "mupdf": "^1.3.1",
     "next": "^15.1.3",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "pdf.js-extract": "^0.2.1",
+    "pdfjs-dist": "^3.4.120",
     "pdfkit": "^0.16.0",
     "playwright": "^1.47.2",
     "react": "^18",
