--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "3.12.0",
     "@supabase/supabase-js": "^2.46.2",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
     "@tanstack/react-table": "^8.20.5",
     "@types/papaparse": "^5.3.15",
     "async-retry": "^1.3.3",
