--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
     "blob-stream": "^0.1.3",
+    "canvas": "^3.1.0",
     "canvas-browserify": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
