--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "convex": "^1.19.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "date-fns": "^3.6.0",
