--- a/.env.local
+++ b/.env.local
@@ -21,3 +21,6 @@ META_WHATSAPP_PHONE_NUMBER_ID=210467705484069
 CONVEX_DEPLOYMENT=dev:uncommon-porpoise-18 # team: booksmart-consultancy-limited, project: kra-tools
 
 NEXT_PUBLIC_CONVEX_URL=https://uncommon-porpoise-18.convex.cloud
+
+
+GROQ_API_KEY=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
