--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-devtools": "^5.66.9",
     "@tanstack/react-table": "^8.20.5",
+    "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.15",
     "async-retry": "^1.3.3",
     "axios": "^1.7.8",
