--- a/app/payroll/payroll-management-wingu/automation/package.json
+++ b/app/payroll/payroll-management-wingu/automation/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "playwright": "^1.41.0",
+    "wingu-automation-service": "file:",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
