--- a/package.json
+++ b/package.json
@@ -88,9 +88,10 @@
     "jszip": "^3.10.1",
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
+    "motion": "^12.11.3",
     "mssql": "^11.0.1",
     "mupdf": "^1.3.1",
-    "next": "^15.2.3",
+    "next": "^15.3.2",
     "next-themes": "^0.3.0",
     "node-qpdf": "^1.0.3",
     "papaparse": "^5.4.1",
