--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.7.0",
     "fuse.js": "^7.1.0",
     "groq-sdk": "^0.15.0",
