--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -90,7 +90,7 @@
     "lucide-react": "^0.446.0",
     "mssql": "^11.0.1",
     "mupdf": "^1.3.1",
-    "next": "^15.1.3",
+    "next": "^15.3.2",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "pdf.js-extract": "^0.2.1",
