--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@pdfme/common": "^5.3.5",
     "@pdfme/generator": "^5.3.5",
     "@pdfme/schemas": "^5.3.5",
-    "@pdfme/ui": "^5.3.5",
+    "@pdfme/ui": "^5.2.16",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -84,7 +84,7 @@
     "groq-sdk": "^0.15.0",
     "html2pdf.js": "^0.10.2",
     "input-otp": "^1.2.4",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "kra-tools": "file:",
     "lucide-react": "^0.446.0",
@@ -120,6 +120,16 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/generator": "^7.22.5",
+    "@babel/helper-module-transforms": "^7.22.5",
+    "@babel/helper-remap-async-to-generator": "^7.22.5",
+    "@babel/helper-replace-supers": "^7.22.5",
+    "@babel/plugin-transform-async-generator-functions": "^7.22.5",
+    "@babel/plugin-transform-regenerator": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/traverse": "^7.22.5",
+    "@babel/types": "^7.22.5",
     "@types/mssql": "^9.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -127,6 +137,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "regenerator-transform": "^0.15.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5",
     "webpack": "^5.95.0",
