--- a/.env.local
+++ b/.env.local
@@ -29,5 +29,5 @@ NEXT_PUBLIC_RAILWAY_APP_URL=
 
 
 
-NEXT_PUBLIC_KRA_AUTOMATIONS_API=https://your-render-deployment-url.onrender.com
+NEXT_PUBLIC_KRA_AUTOMATIONS_API=https://kra-automations.onrender.com
 
