--- a/automations/Dockerfile
+++ b/automations/Dockerfile
@@ -1,7 +1,17 @@
-# automations/Dockerfile
+# Universal Automation Docker Image for Railway Deployment
 FROM node:18
 
-# Install required dependencies for Playwright
+# Set environment variables
+ENV NODE_ENV=production
+ENV DOWNLOAD_FOLDER=/tmp/downloads
+ENV AUTOMATION_TYPE=password-checker
+ENV WORKER_ID=${RAILWAY_SERVICE_ID:-worker-1}
+ENV BATCH_SIZE=5
+
+# Create directories
+RUN mkdir -p ${DOWNLOAD_FOLDER}
+
+# Install required dependencies for Playwright and utilities
 RUN apt-get update && apt-get install -y \
     libglib2.0-0 \
     libnss3 \
@@ -26,6 +36,9 @@ RUN apt-get update && apt-get install -y \
     libxtst6 \
     tesseract-ocr \
     libtesseract-dev \
+    wget \
+    ca-certificates \
+    fonts-liberation \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -47,8 +60,28 @@ RUN mkdir -p /app/data
 # Copy the application code
 COPY . .
 
+# Support for dynamic automation selection
+RUN echo '#!/bin/bash\n\
+if [[ "$AUTOMATION_TYPE" == "password-checker" ]]; then\n\
+  echo "Starting Password Checker Automation..."\n\
+  node password-checker/index.js\n\
+elif [[ "$AUTOMATION_TYPE" == "pin-checker" ]]; then\n\
+  echo "Starting PIN Checker Automation..."\n\
+  node pin-checker/index.js\n\
+elif [[ "$AUTOMATION_TYPE" == "manufacturer-details" ]]; then\n\
+  echo "Starting Manufacturer Details Automation..."\n\
+  node manufacturer-details/index.js\n\
+else\n\
+  echo "Starting main server..."\n\
+  node server.js\n\
+fi' > /app/start.sh && chmod +x /app/start.sh
+
 # Expose the port
 EXPOSE 3000
 
-# Start the application
-CMD ["node", "server.js"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
+
+# Start the appropriate automation based on environment variables
+CMD ["/app/start.sh"]
