--- a/automations/package.json
+++ b/automations/package.json
@@ -1,22 +1,27 @@
 {
     "name": "kra-automations",
     "version": "1.0.0",
-    "description": "KRA Automation Services",
+    "description": "KRA Automation Services with Parallel Processing",
     "main": "server.js",
     "type": "module",
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
+        "password-checker": "node password-checker/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.33.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "exceljs": "^4.3.0",
         "playwright": "^1.38.0",
-        "tesseract.js": "^5.0.2"
+        "tesseract.js": "^5.0.2",
+        "node-fetch": "^3.3.2",
+        "winston": "^3.10.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
